--- a/src/main/webapp/WEB-INF/views/thymeleaf/viaje.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/viaje.html
@@ -59,7 +59,7 @@
     <div class="card mb-3">
 
         <img class="card-img-top bottomSpace" th:src="@{'/destino/imagen/' + ${viaje.destino.id}}" height="380px" alt="Imagen descriptiva del destino del viaje">
-        <h1 class="card-title text-center"
+        <h1 class="card-title text-center mt-3"
             th:text="'Viaje creado por ' + ${viaje.usuario.nombre + ' ' + viaje.usuario.apellido}"></h1>
         <!--<h5 class="card-text">Descripción</h5>-->
         <p class="card-text text-center topSpace" th:text="${viaje.descripcion}"></p>
@@ -69,6 +69,19 @@
                 <p class="card-text" th:text="${viaje.origen.provincia.nombre} + ', ' + ${viaje.origen.nombre}"></p>
                 <h5 class="card-text">Fecha de salida</h5>
                 <p class="card-text" th:text="${viaje.fecha}"></p>
+                <h5 class="card-text">Cupo del viaje: </h5>
+                <p class="card-text" th:text="${viaje.cantidad}"></p>
+                <h5 class="card-text">Lugares disponibles</h5>
+                <p class="card-text" th:text="${viaje.cantidad - viaje.getListaPasajeros().size()}"></p>
+
+            </div>
+            <div class="col text-center">
+                <h5 class="card-text">Destino</h5>
+                <p class="card-text" th:text="${viaje.destino.provincia.nombre} + ', ' + ${viaje.destino.nombre}"></p>
+                <h5 class="card-text">Tiempo de viaje</h5>
+                <p class="card-text" id="duracion"></p>
+                <h5 class="card-text">Distancia a Recorrer:</h5>
+                <p class="card-text" id="distancia"></p>
                 <h5 class="card-text">Condiciones</h5>
                 <li class="list-group-item" style="font-size: 2em !important;">
                     <span th:if="${viaje.noFumar}">
@@ -97,53 +110,46 @@
                     </span>
                 </li>
             </div>
-            <div class="col text-center">
-                <h5 class="card-text">Destino</h5>
-                <p class="card-text" th:text="${viaje.destino.provincia.nombre} + ', ' + ${viaje.destino.nombre}"></p>
-                <h5 class="card-text">Tiempo de viaje</h5>
-                <p class="card-text" id="duracion"></p>
-                <h5 class="card-text">Distancia a Recorrer:</h5>
-                <p class="card-text" id="distancia"></p>
-                <h5 class="card-text">Lugares disponibles</h5>
-                <p class="card-text" th:text="${viaje.cantidad - viaje.getListaPasajeros().size()}"></p>
-            </div>
         </div>
         <p class="card-text text-center topSpace"><small class="text-muted">Última actualización: hace 2 días</small>
         </p>
         <div class="d-flex justify-content-center">
-            <a th:href="@{/perfil/usuario(idUsuario= ${viaje.usuario.id})}"
+            <a th:href="@{/usuario(idUsuario= ${viaje.usuario.id})}"
                class="btn btn-primary bottomSpace rightSpace">Ver perfil</a>
             <a href="#" class="btn btn-secondary bottomSpace rightSpace">Conectar</a>
-            <a th:href="@{/unir-a-viaje(viaje = ${viaje.id})}" class="btn  bottomSpace rightSpace"></a>
-<!--               th:classappend="${unido ? 'btn-secondary' : 'btn-primary'}" th:text="${unido ? 'Unido' : 'Unirme'}"></a>-->
-
-                <button type="button" class="btn btn-primary" th:onclick="'mostrarGastos(\'' + ${viaje.id} + '\')'">
-                    Ver Gastos
-                </button>
+            <a th:href="@{/unir-a-viaje(viaje = ${viaje.id})}" class="btn btn-active  bottomSpace rightSpace"
+               th:classappend="${unido ? 'btn-secondary' : 'btn-primary'}" th:text="${unido ? 'Unido' : 'Unirme'}">Unirme</a>
+            <button type="button" class="btn btn-calcular-gasto bottomSpace rightSpace" th:onclick="'mostrarGastos(\'' + ${viaje.id} + '\')'">
+                Ver Gastos
+            </button>
         </div>
 
         <!-- Modal -->
-        <div class="gastos-section">
-            <h2>Sección de Gastos</h2>
-            <table class="table listaGastos">
-                <thead>
-                <tr>
-                    <th>Detalle</th>
-                    <th>Monto</th>
-                </tr>
-                </thead>
-                <tbody id="tablaGastos">
+        <div class="gastos-section container p-5 mt-4" style="box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);" >
 
-                </tbody>
-            </table>
-            <h5>Gasto total: <span id="montoTotal"></span></h5>
-            <p>*Recuerde que el TOTAL puede varias segun los gastos que agregue el conductor ya que este puede seguir agregando gasto hasta el final del viaje.</p>
+            <div class="card mt-0" style="padding: 2rem!important; box-shadow: 2px 4px 10px rgba(0, 0, 0, 1);">
+                <h2 class="card-title text-center mb-5" style="text-decoration: underline;">Sección de Gastos</h2>
+                <table class="table listaGastos " >
+                    <thead>
+                    <tr class="text-center">
+                        <th>Detalle</th>
+                        <th>Monto</th>
+                    </tr>
+                    </thead>
+                    <tbody id="tablaGastos" class="text-center">
 
+                    </tbody>
+                </table>
+                <h5 class="card-text" style="margin-top: 15px;text-align: center;font-style: italic; margin-bottom: 20px;">Gasto total: <span id="montoTotal"></span></h5>
+                <p class="card-footer card-text" style="background-color: rgba(0,0,0,0.1)!important;margin-top: 1rem!important;border: 1px solid rgba(0,0,0,.125)!important;">*Recuerde que el TOTAL puede varias segun los gastos que agregue el conductor ya que este puede seguir agregando gastos hasta el final del viaje.</p>
+                <p class="card-footer card-text" style="background-color: rgba(0,0,0,0.1)!important;margin-top: 0!important;border: 1px solid rgba(0,0,0,.125)!important;">*El cálculo por persona es variable segun la cantidad de personas en el viaje.</p>
+                <div class=" mt-3 row">
+                    <button type="btn-calcular-gasto" class="btn btn-success col-3 ms-2" onclick="calcularMontoPorPersona()">Calcular Monto por Persona</button>
 
-            <button type="button" class="btn btn-success" onclick="calcularMontoPorPersona()">Calcular Monto por Persona</button>
-
-            <!-- Mostrar el resultado del cálculo del monto por persona -->
-            <p>Monto por Persona: <span id="montoPorPersona"></span></p>
+                    <!-- Mostrar el resultado del cálculo del monto por persona -->
+                    <h6 class="card-text  ms-5 col-6 " id="calcular-gasto"  style="display: none; font-size: 20px; ">Monto por Persona: <span id="montoPorPersona"></span></h6>
+                </div>
+            </div>
 
         </div>
 
