modifico cosas en vista mi perfil

--- a/src/main/webapp/WEB-INF/views/thymeleaf/misviajes.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/misviajes.html
@@ -55,7 +55,7 @@
                 <div class="card-body">
                     <div class="border border-light p-2 mb-3">
                         <h3 class="header-title mb-3"
-                            th:text="${usuario.nombre} + ' estos son tus proximos viajes:'"></h3>
+                            th:text="${usuario.nombre} + ' Viajes a los que te uniste: '"></h3>
                         <div th:each="viaje : ${viajes}">
                             <div class="card card-margin flex-row">
                                 <div class="flex-row userInfo text-center">
