--- a/src/main/webapp/WEB-INF/views/thymeleaf/perfil.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/perfil.html
@@ -60,78 +60,27 @@
             <div class="col-xl-12">
                 <div class="card">
                     <div class="card-body">
-                        <div class="dropdown float-end">
-                            <a href="#" class="dropdown-toggle arrow-none card-drop" data-bs-toggle="dropdown" aria-expanded="false">
-                                <i class="mdi mdi-dots-vertical"></i>
-                            </a>
-                            <div class="dropdown-menu dropdown-menu-end">
-
-                                <a href="javascript:void(0);" class="dropdown-item">Edit</a>
-
-                                <a href="javascript:void(0);" class="dropdown-item">Delete</a>
-
-                                <a href="javascript:void(0);" class="dropdown-item">Block</a>
-                            </div>
-                        </div>
-                        <div class="d-flex align-items-start">
-                            <img th:src="@{'/usuario/imagen/' + ${usuario.getId()}}" class="rounded-circle avatar-lg img-thumbnail" alt="profile-image">
+                        <div class="d-flex justify-content-center">
+                            <img th:src="@{'/usuario/imagen/' + ${usuario.getId()}}" class="img-thumbnail" alt="profile-image" style="max-width: 25% !important;">
                             <div class="w-100 ms-3">
-                                <h4 th:text="${usuario.nombre + ' ' + usuario.apellido}" class="my-0"></h4>
-                                <p class="text-muted" th:text="${usuario.email}"></p>
-                                <div class="profile-cover__action bg--img" data-overlay="0.3">
-                                    <button class="btn btn-rounded btn-info">
-                                        <i class="fa fa-plus"></i>
-                                        <span>Follow</span>
-                                    </button>
-                                    <button class="btn btn-rounded btn-info">
-                                        <i class="fa fa-comment"></i>
-                                        <span>Message</span>
-                                    </button>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-xl-6">
-                                <div class="mt-3">
-                                    <h4 class="font-13 text-uppercase">About Me :</h4>
-                                    <p class="text-muted font-13 mb-3">
-                                        Hi I'm Johnathn Deo,has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type.
-                                    </p>
-                                    <p class="text-muted mb-2 font-13"><strong>Full Name :</strong> <span class="ms-2" th:text="${usuario.nombre}+${usuario.apellido}" ></span></p>
-                                    <p class="text-muted mb-1 font-13"><strong>Location :</strong> <span class="ms-2">Argentina</span></p>
-                                </div>
-                                <ul class="social-list list-inline mt-3 mb-0">
-                                    <li class="list-inline-item">
-                                        <a href="javascript: void(0);" class="social-list-item text-center border-primary text-primary"><i class="mdi mdi-facebook"></i></a>
-                                    </li>
-                                    <li class="list-inline-item">
-                                        <a href="javascript: void(0);" class="social-list-item text-center border-danger text-danger"><i class="mdi mdi-google"></i></a>
-                                    </li>
-                                    <li class="list-inline-item">
-                                        <a href="javascript: void(0);" class="social-list-item text-center border-info text-info"><i class="mdi mdi-twitter"></i></a>
-                                    </li>
-                                    <li class="list-inline-item">
-                                        <a href="javascript: void(0);" class="social-list-item text-center border-secondary text-secondary"><i class="mdi mdi-github"></i></a>
-                                    </li>
-                                </ul>
-                            </div>
-                            <div class="col-xl-6">
-                                <div class="card-body text-center">
-                                    <div class="row">
-                                        <div class="col-4 border-end border-light">
-                                            <h5 class="text-muted mt-1 mb-2 fw-normal">Applied</h5>
-                                            <h2 class="mb-0 fw-bold">116</h2>
-                                        </div>
-                                        <div class="col-4 border-end border-light">
-                                            <h5 class="text-muted mt-1 mb-2 fw-normal">Reviewed</h5>
-                                            <h2 class="mb-0 fw-bold">87</h2>
-                                        </div>
-                                        <div class="col-4">
-                                            <h5 class="text-muted mt-1 mb-2 fw-normal">Contacted</h5>
-                                            <h2 class="mb-0 fw-bold">98</h2>
-                                        </div>
+                                <h3 th:text="${usuario.nombre + ' ' + usuario.apellido}" class="my-0"></h3>
+                                <h4 class="text-muted" th:text="${usuario.email}"></h4>
+                                <p class="text-muted mb-1 font-13"><strong>Ubicación:</strong> <span class="ms-2">Argentina</span></p>
+                                <div class="row">
+                                    <div class="col-4 border-end border-light">
+                                        <h5 class="text-muted mt-1 mb-2 fw-normal">Viajes creados</h5>
+                                        <h2 class="mb-0 fw-bold">116</h2>
+                                    </div>
+                                    <div class="col-4 border-end border-light">
+                                        <h5 class="text-muted mt-1 mb-2 fw-normal">Viajes unidos</h5>
+                                        <h2 class="mb-0 fw-bold">87</h2>
+                                    </div>
+                                    <div class="col-4 border-end border-light">
+                                        <h5 class="text-muted mt-1 mb-2 fw-normal">Calificación</h5>
+                                        <h2 class="mb-0 fw-bold">87</h2>
                                     </div>
                                 </div>
+
                             </div>
                         </div>
                     </div>
@@ -144,24 +93,26 @@
             <div  class="card">
                 <div class="card-body">
                     <div class="card-header">
-                        <h2 class="header-title mb-3 text-center" th:text="${usuario.nombre} + ' estos son tus proximos viajes:'"></h2>
+                        <h2 class="header-title mb-3 text-center" th:text="'Viajes creados por: ' + ${usuario.nombre}"></h2>
                     </div>
                     <div class="border border-light p-2 mb-3" th:if="${viajes != null && viajes.size() > 0}">
                         <div th:each="viaje : ${viajes}">
-                            <div class="card card-margin flex-row">
-                                <div class="flex-row userInfo text-center">
+                            <div class="card card-margin flex-row align-items-center">
+                                <div class="flex-row userInfo text-center" style="padding: 1rem !important">
                                     <div class="flex-row">
                                         <img th:src="@{'/usuario/imagen/' + ${usuario.getId()}}" alt="avatar"
                                              class="rounded-circle img-avatar-size topSpace"
                                              style="max-width: 65% !important">
                                         <h4 th:text="${viaje.usuario.nombre + ' ' + viaje.usuario.apellido}"
                                             class="card-title"></h4>
-                                        <a th:href="@{/crear-viaje(viaje = ${viaje.id})}"  th:if="${stalker == null}" class="btn btn-primary bottomSpace">Modificar</a>
+                                        <a th:href="@{/ver-viaje(id=${viaje.id})}" class="btn btn-secondary bottomSpace">Detalle de viaje</a>
+                                        <a th:href="@{/crear-viaje(viaje = ${viaje.id})}" th:if="${stalker == null}" class="btn btn-primary bottomSpace">Modificar viaje</a>
+                                        <button th:if="${session.usuario} eq ${viaje.usuario}" th:attr="onclick='openModal(\'' + ${viaje.id} + '\')'" class="btn btn-info bottomSpace">Registrar gasto</button>
                                     </div>
                                 </div>
                                 <div class="col-lg-10 d-block">
                                     <div class="card-header no-border">
-                                        <div class="col-lg-5 card-body">
+                                        <div class="col-lg-5 card-body topSpace">
                                             <div class="widget-49-title-wrapper">
                                                 <div class="widget-49-meeting-time">
                                                     <div class="widget-49-date-warning">
@@ -211,9 +162,13 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="col-lg-5 card-body">
+                                        <div class="col-lg-5 card-body topSpace">
                                             <div class="widget-49-title-wrapper">
                                                 <div class="widget-49-meeting-time">
+                                                    <div class="widget-49-date-warning">
+                                                        <span class="widget-49-pro-title dateInfo">Cupo del viaje: </span>
+                                                        <span class="widget-49-pro-title" th:text="${viaje.cantidad}"></span>
+                                                    </div>
                                                     <div class="widget-49-date-warning">
                                                         <span class="widget-49-pro-title dateInfo">Lugares disponibles: </span>
                                                         <span class="widget-49-pro-title" th:text="${viaje.cantidad - viaje.getListaPasajeros().size()}"></span>
@@ -226,7 +181,7 @@
                                                         </div>
                                                     </div>
                                                     
-                                                    <button th:if="${session.usuario} eq ${viaje.usuario}" th:attr="onclick='openModal(\'' + ${viaje.id} + '\')'" class="btn btn-info p-2 ms-2">Registrar Gasto</button>
+
 
                                                     <div th:attr="id='myModal-' + ${viaje.id}" class="modal" >
                                                         <div class="modal-content">
