--- a/src/main/webapp/resources/core/css/provincia.css
+++ b/src/main/webapp/resources/core/css/provincia.css
@@ -51,7 +51,7 @@ body{
 .userInfo{
     background-color: #a5b1b5 !important;
     border-radius: 8px 0px 0px 8px;
-    padding: 0 0.9375rem;
+    padding: 1rem !important;
     font-weight: 500;
     display: flex;
     align-items: center;
