--- a/src/main/webapp/resources/core/css/viaje.css
+++ b/src/main/webapp/resources/core/css/viaje.css
@@ -47,7 +47,7 @@ body{
 .userInfo{
     background-color: #a5b1b5 !important;
     border-radius: 8px 0px 0px 8px;
-    padding: 1rem;
+    padding: 1rem !important;
     font-weight: 500;
     display: flex;
     align-items: center;
