--- a/src/main/webapp/WEB-INF/views/thymeleaf/perfil.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/perfil.html
@@ -60,19 +60,19 @@
             <div class="col-xl-12">
                 <div class="card">
                     <div class="card-body">
-                        <div class="d-flex justify-content-center">
+                        <div class="d-flex justify-content-center align-items-center text-center">
                             <img th:src="@{'/usuario/imagen/' + ${usuario.getId()}}" class="img-thumbnail" alt="profile-image" style="max-width: 25% !important;">
                             <div class="w-100 ms-3">
                                 <h3 th:text="${usuario.nombre + ' ' + usuario.apellido}" class="my-0"></h3>
-                                <h4 class="text-muted" th:text="${usuario.email}"></h4>
-                                <p class="text-muted mb-1 font-13"><strong>Ubicación:</strong> <span class="ms-2">Argentina</span></p>
+                                <h5 class="text-muted" th:text="${usuario.email}"></h5>
+                                <h6 class="text-muted mb-1 font-13"><strong>Ubicación:</strong> <span class="ms-2">Argentina</span></h6>
                                 <div class="row">
                                     <div class="col-4 border-end border-light">
                                         <h5 class="text-muted mt-1 mb-2 fw-normal">Viajes creados</h5>
                                         <h2 class="mb-0 fw-bold">116</h2>
                                     </div>
                                     <div class="col-4 border-end border-light">
-                                        <h5 class="text-muted mt-1 mb-2 fw-normal">Viajes unidos</h5>
+                                        <h5 class="text-muted mt-1 mb-2 fw-normal">Viajes a los que se unió</h5>
                                         <h2 class="mb-0 fw-bold">87</h2>
                                     </div>
                                     <div class="col-4 border-end border-light">
@@ -105,9 +105,9 @@
                                              style="max-width: 65% !important">
                                         <h4 th:text="${viaje.usuario.nombre + ' ' + viaje.usuario.apellido}"
                                             class="card-title"></h4>
-                                        <a th:href="@{/ver-viaje(id=${viaje.id})}" class="btn btn-secondary bottomSpace">Detalle de viaje</a>
-                                        <a th:href="@{/crear-viaje(viaje = ${viaje.id})}" th:if="${stalker == null}" class="btn btn-primary bottomSpace">Modificar viaje</a>
-                                        <button th:if="${session.usuario} eq ${viaje.usuario}" th:attr="onclick='openModal(\'' + ${viaje.id} + '\')'" class="btn btn-info bottomSpace">Registrar gasto</button>
+                                        <a th:href="@{/ver-viaje(id=${viaje.id})}" class="btn btn-secondary bottomSpace btn-block">Ver viaje</a>
+                                        <a th:href="@{/crear-viaje(viaje = ${viaje.id})}" th:if="${stalker == null}" class="btn btn-primary bottomSpace btn-block">Modificar viaje</a>
+                                        <button th:if="${session.usuario} eq ${viaje.usuario}" th:attr="onclick='openModal(\'' + ${viaje.id} + '\')'" class="btn btn-info bottomSpace btn-block">Registrar gasto</button>
                                     </div>
                                 </div>
                                 <div class="col-lg-10 d-block">
