--- a/src/main/webapp/WEB-INF/views/thymeleaf/misviajes.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/misviajes.html
@@ -35,6 +35,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link th:href="@{/css/perfil.css}" rel="stylesheet">
     <link th:href="@{/css/viaje.css}" rel="stylesheet">
+    <link th:href="@{/css/modal.css}" rel="stylesheet">
 </head>
 <body class="body-wrapper">
 <header>
@@ -181,8 +182,8 @@
                                     <div class="card card-margin flex-row align-items-center">
                                         <div class="flex-row userInfo text-center" style="padding: 1rem !important">
                                             <div class="flex-row">
-                                                <img th:src="@{'/usuario/imagen/' + ${usuario.getId()}}" alt="avatar"
-                                                     class="rounded-circle img-avatar-size topSpace">
+                                                <!--<img th:src="@{'/usuario/imagen/' + ${usuario.getId()}}" alt="avatar"
+                                                     class="rounded-circle img-avatar-size topSpace">-->
                                                 <h4 th:text="${viaje.usuario.nombre + ' ' + viaje.usuario.apellido}"
                                                     class="card-title"></h4>
                                                 <a th:href="@{/ver-viaje(id=${viaje.id})}"
@@ -262,12 +263,11 @@
                                                                           th:text="${viaje.descripcion}"></span>
                                                                 </div>
                                                             </div>
-
-                                                            <!--<div th:attr="id='myModal-' + ${viaje.id}" class="modal" >
+                                                            <div th:attr="id='myModal-' + ${viaje.id}" class="modal" >
                                                                 <div class="modal-content">
                                                                     <span class="close" onclick="closeModal()">&times;</span>
                                                                     <p class="text-center mt-5 " style="font-size: 30px;margin-top: 2rem;text-align: center;font-weight: 900;">Nuevo Gasto</p>
-                                                                    <form class="p-3" action="#" th:action="@{/agregar-gasto}" th:object="${gasto}" method="POST">
+                                                                    <form class="p-3" action="#" th:action="@{/add-gasto}" th:object="${gasto}" method="POST">
                                                                         <div class="form-group">
                                                                             <input type="hidden" id="idViaje" name="idViaje" th:value="${viaje.id}">
                                                                             <label for="descripcion" class="mb-3"><strong>Detalle del Gasto:</strong></label>
@@ -286,7 +286,7 @@
                                                                         </div>
                                                                     </form>
                                                                 </div>
-                                                            </div>-->
+                                                            </div>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -322,4 +322,5 @@
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCcABaamniA6OL5YvYSpB3pFMNrXwXnLwU" defer></script>
 <script src="plugins/google-map/map.js" defer></script>
 <script th:src="@{js/script.js}"></script>
+<script th:src="@{/js/modal.js}"></script>
 </html>
