--- a/src/main/webapp/WEB-INF/views/thymeleaf/viaje.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/viaje.html
@@ -139,7 +139,7 @@
                     </tbody>
                 </table>
                 <h5 class="card-text" style="margin-top: 15px;text-align: center;font-style: italic; margin-bottom: 20px;">Gasto total: <span id="montoTotal"></span></h5>
-                <p class="card-footer card-text" style="background-color: rgba(0,0,0,0.1)!important;margin-top: 1rem!important;border: 1px solid rgba(0,0,0,.125)!important;">*Recuerde que el TOTAL puede varias segun los gastos que agregue el conductor ya que este puede seguir agregando gastos hasta el final del viaje.</p>
+                <p class="card-footer card-text" style="background-color: rgba(0,0,0,0.1)!important;margin-top: 1rem!important;border: 1px solid rgba(0,0,0,.125)!important;">*Recuerde que el TOTAL puede variar segun los gastos que agregue el conductor ya que este puede seguir agregando gastos hasta el final del viaje.</p>
                 <p class="card-footer card-text" style="background-color: rgba(0,0,0,0.1)!important;margin-top: 0!important;border: 1px solid rgba(0,0,0,.125)!important;">*El cálculo por persona es variable segun la cantidad de personas en el viaje.</p>
                 <div class=" mt-3 row">
                     <button type="btn-calcular-gasto" class="btn btn-success col-3 ms-2" onclick="calcularMontoPorPersona()">Calcular Monto por Persona</button>
