--- a/src/main/webapp/WEB-INF/views/thymeleaf/perfil.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/perfil.html
@@ -72,7 +72,7 @@
                         </div>
                     </div>
                     <div class="d-flex align-items-start">
-                        <img th:src="@{'/usuario/imagen/' + ${usuario.getId()}}" class="rounded-circle avatar-lg img-thumbnail" alt="profile-image">
+<!--                        <img th:src="@{'/usuario/imagen/' + ${usuario.id}}" class="rounded-circle avatar-lg img-thumbnail" alt="profile-image">-->
                         <div class="w-100 ms-3">
                             <h4 th:text="${usuario.nombre + ' ' + usuario.apellido}" class="my-0"></h4>
                             <p class="text-muted" th:text="${usuario.email}"></p>
@@ -244,37 +244,35 @@
                 <div class="card-body">
                     <div class="border border-light p-2 mb-3">
                         <h4 class="header-title mb-3">Reseñas</h4>
-                        <div class="d-flex align-items-start post-user-comment-box">
-                            <img class="me-2 avatar-sm rounded-circle" src="https://bootdey.com/img/Content/avatar/avatar4.png" alt="Generic placeholder image">
-                            <div class="w-100">
-                                <h5 class>Thelma Fridley <small class="text-muted"> 1 hour ago</small></h5>
-                                <div class>
-                                    Cras sit amet nibh libero, in
-                                    gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras
-                                    purus odio, vestibulum in vulputate at, tempus viverra turpis. Duis
-                                    sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper
-                                    porta. Mauris massa.
-                                    <br>
-                                    <a href="javascript: void(0);" class="text-muted font-13 d-inline-block mt-2"><i class="mdi mdi-reply"></i> Reply</a>
-                                </div>
+                        <div th:unless="${comentarios != null && comentarios.size() > 0}">
+                            <div style="display: flex; flex-direction: column;" class="text-center topSpace">
+                                <i class="fa-solid fa-exclamation-triangle mt-3 topSpace" style="font-size: 1.5em;"></i>
+                                <h4>¡Aún no hay reseñas para éste usuario!</h4>
                             </div>
                         </div>
                         <div th:each="comentario : ${comentarios}">
                             <div class="d-flex align-items-start post-user-comment-box">
-                                <img class="me-2 avatar-sm rounded-circle" th:src="${comentario.imagenDePerfil}" alt="Generic placeholder image">
+                                <img class="me-2 avatar-sm rounded-circle" th:src="@{'/usuario/imagen/' + ${comentario.usuarioOrigen.id}}" alt="Generic placeholder image">
                                 <div class="w-100">
-                                    <h5 class th:text="${comentario.nombre}"><small class="text-muted"> 1 hour ago</small></h5>
-                                    <div class>
-                                        Cras sit amet nibh libero, in
-                                        gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras
-                                        purus odio, vestibulum in vulputate at, tempus viverra turpis. Duis
-                                        sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper
-                                        porta. Mauris massa.
+                                    <h5 class th:text="${comentario.usuarioOrigen.nombre}"><small class="text-muted"> 1 hour ago</small></h5>
+                                    <div class th:text="${comentario.descripcion}">
                                         <br>
                                         <a href="javascript: void(0);" class="text-muted font-13 d-inline-block mt-2"><i class="mdi mdi-reply"></i> Reply</a>
                                     </div>
                                 </div>
                             </div>
+                        </div>
+                        <div class="container mt-5 mx-auto">
+                            <form id="commentForm" th:action="@{/comentario}" th:object="${comentario}" method="POST">
+                                <div class="form-row">
+                                    <div class="form-group col-md-6 mx-auto">
+                                        <div>
+                                            <textarea th:field="${comentario.descripcion}" class="form-control" id="comentario" rows="3" required placeholder="Realiza un comentario"></textarea>
+                                            <button type="submit" class="btn btn-primary mt-4" th:onclick="submitForm()">Enviar</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </form>
                         </div>
                     </div>
                 </div>
@@ -320,10 +318,9 @@
 
 <script>
     function submitForm() {
-        var score = document.getElementById('score').value;
         var comment = document.getElementById('comment').value;
 
-        if (score && comment) {
+        if (comment) {
             // Aquí puedes realizar alguna acción con los datos del formulario
             // Por ejemplo, enviarlos a un servidor o guardarlos localmente
 
