cambios en perfil

--- a/src/main/webapp/WEB-INF/views/thymeleaf/perfil.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/perfil.html
@@ -69,11 +69,11 @@
                                 <div class="row">
                                     <div class="col-4 border-end border-light">
                                         <h5 class="text-muted mt-1 mb-2 fw-normal">Viajes creados</h5>
-                                        <h2 class="mb-0 fw-semibold" th:text="${viajesCreados.size()}"></h2>
+                                        <h2 class="mb-0 fw-semibold" th:text="${cantidadViajesCreados}"></h2>
                                     </div>
                                     <div class="col-4 border-end border-light">
                                         <h5 class="text-muted mt-1 mb-2 fw-normal">Viajes a los que se unió</h5>
-                                        <h2 class="mb-0 fw-semibold" th:text="${viajesUnidos.size()}"></h2>
+                                        <h2 class="mb-0 fw-semibold" th:text="${cantidadViajesUnidos}"></h2>
                                     </div>
                                     <div class="col-4 border-end border-light">
                                         <h5 class="text-muted mt-1 mb-2 fw-normal">Calificación</h5>
